fix: CORS config and technician dropdown